# C_to_python

./: README.md  pyproject.toml
c_to_python/: pelt.c  test.py
